# ComfyUI-Ovi

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
nodes/: __init__.py  ovi_attention_selector.py  ovi_blockswap.py  ovi_engine_loader.py  ovi_latent_decoder.py  ovi_video_generator.py  ovi_wan_component_loader.py
ovi/: ovi_fusion_engine.py
ovi/configs/inference/: inference_fusion.yaml
ovi/modules/: __init__.py  attention.py  fusion.py  model.py  t5.py  vae.py  vae2_2.py
ovi/utils/: block_swap.py  checkpoint_manager.py  io_utils.py  model_loading_utils.py  processing_utils.py
workflow_example/: ComfyUI-OVI-workflow-example.json
