[project]
name = "ovi"
description = "Lightweight ComfyUI wrapper that bring Character.AI's Ovi video+audio generator to ComfyUI with streamlined setup, selectable precision, and attention-backend control."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["opencv-python>=4.9.0.80", "diffusers>=0.31.0", "transformers>=4.49.0", "tokenizers>=0.20.3", "accelerate>=1.1.1", "tqdm", "imageio", "easydict", "ftfy", "dashscope", "numpy>=1.23.5", "scipy", "librosa", "omegaconf", "pandas", "open-clip-torch", "protobuf", "sentencepiece", "huggingface_hub>=0.25.0", "pydub>=0.25.1"]

[project.urls]
Repository = "https://github.com/snicolast/ComfyUI-Ovi"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/snicolast/ComfyUI-Ovi/wiki"
"Bug Tracker" = "https://github.com/snicolast/ComfyUI-Ovi/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Ovi"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

